; ModuleID = '/home/carl/AnghaBench/esp-idf/components/freemodbus/common/extr_esp_modbus_slave.c_mbc_slave_check_event.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/freemodbus/common/extr_esp_modbus_slave.c_mbc_slave_check_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (i32)* }

@slave_interface_ptr = common dso_local global %struct.TYPE_2__* null, align 8
@MB_EVENT_NO_EVENTS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [46 x i8] c"Slave interface is not correctly initialized.\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mbc_slave_check_event(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load %struct.TYPE_2__*, %struct.TYPE_2__** @slave_interface_ptr, align 8
  %5 = icmp ne %struct.TYPE_2__* %4, null
  %6 = zext i1 %5 to i32
  %7 = load i32, i32* @MB_EVENT_NO_EVENTS, align 4
  %8 = call i32 @MB_SLAVE_CHECK(i32 %6, i32 %7, i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str, i64 0, i64 0))
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** @slave_interface_ptr, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32 (i32)*, i32 (i32)** %10, align 8
  %12 = icmp ne i32 (i32)* %11, null
  %13 = zext i1 %12 to i32
  %14 = load i32, i32* @MB_EVENT_NO_EVENTS, align 4
  %15 = call i32 @MB_SLAVE_CHECK(i32 %13, i32 %14, i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str, i64 0, i64 0))
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** @slave_interface_ptr, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32 (i32)*, i32 (i32)** %17, align 8
  %19 = load i32, i32* %2, align 4
  %20 = call i32 %18(i32 %19)
  store i32 %20, i32* %3, align 4
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}

declare dso_local i32 @MB_SLAVE_CHECK(i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
